kubernetes/sonarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: sonarr
spec:
  hostnames:
    - sonarr.k8s.weinbender.io
  parentRefs:
    - kind: Gateway
      name: cluster-gateway
      namespace: envoy-gateway-system
      group: gateway.networking.k8s.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - kind: Service
          name: sonarr
          namespace: sonarr
          port: 8989
          group: ""
          weight: 1
